# silco

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  silco_jupyter_homework_fa.ipynb  silco_jupyter_smoke_test.ipynb
.github/workflows/: workflow.yaml
.kiro/specs/project-cleanup-refactor/: .config.kiro  requirements.md
silco/: __init__.py
silco.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
silco/core/: __init__.py  config.py  diagram.py  graphics.py  kernel.py  layout.py  positioned_node.py  render_config.py
silco/core/models/: __init__.py  edge.py  flow.py  group.py  node.py
silco/core/presentation/: __init__.py
silco/core/renderers/: __init__.py  diagram.py  diagrams_backend.py  mermaid.py  style.py  svg.py  svg_common.py
silco/core/renderers/base/: diagram.py  layout.py
silco/core/renderers/exporter/: svg.py
silco/plugins/: __init__.py  ipython.py  pdf.py
silco/plugins/renderers/: __init__.py  mermaid.py  svg.py
silco/plugins/renderers/styles/: modern.py  uml.py
tests/: test_core.py  test_smoke.py
