[project]
name = "silco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.3",
]

[project.optional-dependencies]
notebook = [
    "ipython>=8",
]

[project.entry-points."silco.plugins"]
ipython = "silco.plugins.ipython"
