[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silco"
version = "0.1.2"
description = "Microkernel-based Python toolkit for system diagrams, SVG rendering, and plugin-driven exports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diagrams>=0.25.1",
    "graphviz>=0.20.3",
    "pydantic>=2.13.3",
]

[project.optional-dependencies]
notebook = [
    "ipython>=8",
]
pdf = [
    "cairosvg>=2.7",
]

[project.entry-points."silco.plugins"]
ipython = "silco.plugins.ipython"
pdf = "silco.plugins.pdf"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["silco*"]

[tool.setuptools.package-data]
silco = [
    "py.typed",
    "core/templates/shapes/*.svg",
    "core/templates/shapes/*.png",
]
